# kookmin_autorace_ajou

./: .gitignore
install/: local_setup.sh  setup.sh
install/kookmin9_viewer/share/kookmin9_viewer/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_cam/share/my_cam/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_imu/share/my_imu/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_lidar/share/my_lidar/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_motor/share/my_motor/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros_tcp_endpoint/share/ros_tcp_endpoint/: package.ps1  package.sh  package.xml
install/ros_tcp_endpoint/share/ros_tcp_endpoint/launch/: endpoint.py
install/track_drive/share/track_drive/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/track_drive/share/track_drive/cmake/: track_driveConfig.cmake
install/xycar_msgs/share/xycar_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/xycar_msgs/share/xycar_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_xycar_msgs__rosidl_generator_cExport-noconfig.cmake  export_xycar_msgs__rosidl_generator_cExport.cmake  export_xycar_msgs__rosidl_generator_cppExport.cmake  export_xycar_msgs__rosidl_generator_pyExport-noconfig.cmake  export_xycar_msgs__rosidl_generator_pyExport.cmake  export_xycar_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_xycar_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_xycar_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_xycar_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  xycar_msgsConfig-version.cmake  xycar_msgsConfig.cmake  xycar_msgs__rosidl_typesupport_cExport-noconfig.cmake  xycar_msgs__rosidl_typesupport_cExport.cmake  xycar_msgs__rosidl_typesupport_cppExport-noconfig.cmake  (+5 more)
log/: latest_build
src/kookmin9_viewer/: package.xml  setup.cfg  setup.py
src/kookmin9_viewer/kookmin9_viewer/: test_viewer.py
src/my_cam/: package.xml  setup.py
src/my_cam/my_cam/: cam_viewer.py
src/my_imu/: package.xml  setup.cfg  setup.py
src/my_imu/my_imu/: roll_pitch_yaw.py
src/my_lidar/: package.xml  setup.cfg  setup.py
src/my_lidar/my_lidar/: lidar_scan.py  lidar_viewer.py
src/my_motor/: package.xml  setup.cfg  setup.py
src/my_motor/my_motor/: go.py  go_stop.py
src/track_drive/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/track_drive/track_drive/: lane_detection.py  track_drive.py
src/xycar_msgs/: CMakeLists.txt  package.xml
src/xycar_msgs/msg/: XycarMotor.msg  XycarUltrasonic.msg
(+50 files in other folders)
